--- a/immich.yml
+++ b/immich.yml
@@ -74,7 +74,7 @@ spec:
           mountPath: /var/lib/postgresql/data
       containers:
       - name: immich-server
-        image: ghcr.io/immich-app/immich-server:release
+        image: ghcr.io/immich-app/immich-server:v1.136.0
         ports:
         - containerPort: 2283
         env:
@@ -170,7 +170,7 @@ spec:
     spec:
       containers:
         - name: immich-machine-learning
-          image: ghcr.io/immich-app/immich-machine-learning:release
+          image: ghcr.io/immich-app/immich-machine-learning:v1.136.0
           ports:
             - containerPort: 3003
               name: http
