--- a/immich.yml
+++ b/immich.yml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: immich-uploaddata-pv
+  name: immich-data-pv
 spec:
   capacity:
     storage: 5Gi
@@ -10,12 +10,12 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/mnt/immich-uploaddata"
+    path: "/mnt/immich-data"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: immich-uploaddata-pvc
+  name: immich-data-pvc
 spec:
   accessModes:
     - ReadWriteOnce
@@ -74,7 +74,7 @@ spec:
           mountPath: /var/lib/postgresql/data
       containers:
       - name: immich-server
-        image: ghcr.io/immich-app/immich-server:v1.136.0
+        image: ghcr.io/immich-app/immich-server:v2.2.3
         ports:
         - containerPort: 2283
         env:
@@ -88,14 +88,14 @@ spec:
           value: immich
         - name: REDIS_HOSTNAME
           value: localhost
-        - name: UPLOAD_LOCATION
-          value: /uploaddata
+        - name: IMMICH_MEDIA_LOCATION
+          value: /data
         volumeMounts:
         - name: syncthing-data
           mountPath: /photos
           subPath: Photos
-        - name: immich-uploaddata
-          mountPath: /uploaddata
+        - name: immich-data
+          mountPath: /data
 
       - name: postgres
         image: ghcr.io/tensorchord/cloudnative-pgvecto.rs:16.5-v0.3.0
@@ -128,9 +128,9 @@ spec:
       - name: syncthing-data
         persistentVolumeClaim:
           claimName: syncthing-data-pvc
-      - name: immich-uploaddata
+      - name: immich-data
         persistentVolumeClaim:
-          claimName: immich-uploaddata-pvc
+          claimName: immich-data-pvc
       - name: immich-db
         persistentVolumeClaim:
           claimName: immich-db-pvc
@@ -170,7 +170,7 @@ spec:
     spec:
       containers:
         - name: immich-machine-learning
-          image: ghcr.io/immich-app/immich-machine-learning:v1.136.0
+          image: ghcr.io/immich-app/immich-machine-learning:v2.2.3
           ports:
             - containerPort: 3003
               name: http
